--- a/import_individual.html
+++ b/import_individual.html
@@ -6,12 +6,12 @@
             <div class="row">
                 <div class="col-xs-12 text-left">
                     <!--START Owner Information Form-->
-                        <div class="card-text">
+                        <div class="card-text noexpand">
                             <h2 class="card-title weight600" id="ownerinfo">Owner Name Information</h2>
                         </div>
                         <script type="application/javascript" src="js/imports.js"></script>
-                            <form method="post" id="individual" action="" name="entityform">
-                                <fieldset aria-labelledby="ownerinfo">
+                            <!--<form method="post" id="individual" action="" name="entityform">
+                                <fieldset aria-labelledby="ownerinfo">-->
                                    <div class="row">
                                       <div class="form-group form-group-md col-xs-12 col-md-8 col-lg-4">
                                         <label for="firstname"><span class="weight600">&#42;</span>First Name <a href="#" data-toggle="tooltip" title="If the owner only has one name, insert the words First Name Unavailable (FNU) in the first name field and the name to be entered in the surname field." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
@@ -70,7 +70,7 @@
                             </fieldset>
                         <!--END Sole Proprietor Information Form-->
                         <!--START Owner Address Information Form-->
-                        <div class="card-text">
+                        <div class="card-text noexpand">
                             <h2 class="card-title weight600" id="addressinfo">Owner Address Information</h2>
                         </div>
                         <fieldset aria-labelledby="addressinfo">
