--- a/import_sole.html
+++ b/import_sole.html
@@ -6,12 +6,12 @@
             <div class="row">
             <div class="col-xs-12 text-left">
                 <!--START Owner Information Form-->
-                    <div class="card-text">
+                    <div class="card-text noexpand">
                         <h2 class="card-title weight600" id="ownerinfo">Owner Information</h2>
                     </div>
                     <script type="application/javascript" src="js/imports.js"></script>
-                    	<form method="post" id="sole" action="" aria-labelledby="usentityselected" name="entityform">
-                        	<fieldset aria-labelledby="ownerinfo">
+<!--                    	<form method="post" id="sole" action="" aria-labelledby="usentityselected" name="entityform">
+-->                        	<fieldset aria-labelledby="ownerinfo">
                                 <div class="row">
                                   <div class="form-group form-group-md col-xs-12 col-lg-7">
                                     <label for="ownername"><span class="weight600">&#42;</span>Owner Name</label>
@@ -53,7 +53,7 @@
                       		</fieldset>
                     	<!--END Owner Information-->
                 <!--START Sole Proprietor Information-->
-                    <div class="card-text">
+                    <div class="card-text noexpand">
                         <h2 class="card-title weight600" id="proprietorinfo">Sole Proprietor Information</h2>
                     </div>
                         <fieldset aria-labelledby="proprietorinfo">
@@ -98,7 +98,7 @@
                    	</fieldset>
               		<!--END Sole Proprietor Information Form-->
                 	<!--START Owner Address Information Form-->
-                    <div class="card-text">
+                    <div class="card-text noexpand">
                         <h2 class="card-title weight600" id="addressinfo">Owner Address Information</h2>
                     </div>
                     <fieldset aria-labelledby="addressinfo">
