--- a/layout_M7.html
+++ b/layout_M7.html
@@ -172,7 +172,7 @@
               	<p class="required"><span class="weight600">&#42; = Required</span></p>
                 <!--START Owner Information Form-->
                 
-                    <div class="card-text">
+                    <div class="card-text noexpand">
                         <h2 class="card-title weight600" id="ownerinfo">Owner Information</h2>
                     </div>
                     <form method="post" id="addNewOwnerForm" action="/owner/add" th:object="${addNewOwnerContactFormDTO}" aria-labelledby="ownerinfo">
@@ -211,7 +211,7 @@
                       	</fieldset>
                     </form><!--END Owner Information Form-->
                 <!--START Sole Proprietor Information Form-->
-                    <div class="card-text">
+                    <div class="card-text noexpand">
                         <h2 class="card-title weight600" id="proprietorinfo">Sole Proprietor Information</h2>
                     </div>
                     <form method="post" aria-labelledby="proprietorinfo">
@@ -256,7 +256,7 @@
                    	</fieldset>
               	</form><!--END Sole Proprietor Information Form-->
                 <!--START Owner Address Information Form-->
-                    <div class="card-text">
+                    <div class="card-text noexpand">
                         <h2 class="card-title weight600" id="addressinfo">Owner Address Information</h2>
                     </div>
                     <form method="post" aria-labelledby="addressinfo">
@@ -309,7 +309,7 @@
                       </fieldset>
                     </form><!--END Owner Address Information Form-->
                 <!--START Additional Information Form-->
-                    <div class="card-text">
+                    <div class="card-text noexpand">
                         <h2 class="card-title weight600" id="additionalinfo">Additional Information</h2>
                     </div>
                     <form method="post" aria-labelledby="additionalinfo">
