--- a/marks_examples_M3.html
+++ b/marks_examples_M3.html
@@ -172,7 +172,7 @@
               <!--START Standard Character-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="standard"></a>Standard Character</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -196,7 +196,7 @@
                     <!--START Stylized-->
                     <div class="row">
                         <div class="col-xs-12">
-                              <div class="card-text">
+                              <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="stylized"></a>Stylized: Text in a particular style or font</h2>
                               </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -220,7 +220,7 @@
                     <!--START Design Only-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="designonly"></a>Design Only</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -244,7 +244,7 @@
                     <!--START Design with Text-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="designwithtext"></a>Design with Text</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -268,7 +268,7 @@
                     <!--START Configuration 3D-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="configuration3d"></a>Configuration 3D</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -292,7 +292,7 @@
                     <!--START Configuration 3D with Text-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="configuration3dtext"></a>Configuration 3D with Text</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -316,7 +316,7 @@
                     <!--START Sound-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="sound"></a>Sound</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -348,7 +348,7 @@
                     <!--START Sound Composite-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="soundcomposite"></a>Sound Composite</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -372,7 +372,7 @@
                     <!--START Scent Mark-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="scent"></a>Scent Mark</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -396,7 +396,7 @@
                     <!--START Tactile-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="tactile"></a>Tactile</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -420,7 +420,7 @@
                      <!--START Color Only-->
                      <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="coloronly"></a>Color Only</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -444,7 +444,7 @@
                     <!--START Motion-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="motion"></a>Motion</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -468,7 +468,7 @@
                     <!--START Motion with Text-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="motionwithtext"></a>Motion with Text</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -492,7 +492,7 @@
                     <!--START Other: (Taste as an example)-->
                     <div class="row">
                         <div class="col-xs-12">
-                            <div class="card-text">
+                            <div class="card-text noexpand">
                                 <h2 class="card-title weight600"><a id="other"></a>Other: (Taste as an example)</h2>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
