--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -169,7 +169,7 @@
                   		<h1>Trademark Details</h1>                
                       	<p class="required"><span class="weight600">&#42; = Required</span></p>
                             <!--START Application Type-->
-                                    <div class="card-text">
+                                    <div class="card-text noexpand">
                                         <h2 class="card-title weight600" id="applicationtype">Mark Type</h2>
                                     </div>
                                     <p id="typemark"><span class="weight600">&#42;</span> What type of mark are you applying for? <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="Trademarks and service marks: Are generally words, symbols, designs, or combinations of these.  Marks are often brand names; they work to identify the sources of goods or services, showing that they come from particular manufacturers or sellers.  Trademarks are for goods, which are physical things that are sold to others, like shoes.  Service marks are for services that are provided to others, like tax preparation services.
