--- a/GS_inuse_yes.html
+++ b/GS_inuse_yes.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" style="-moz-border-radius: 0px;-webkit-border-radius: 0px;border-radius: 0px;" type="image/x-icon" th:href="@{/resources/images/nav_banner.png}">
 
-    <title>USPTO.gov :: webapp prototype :: Trademark Design with Text - File Upload</title>
+    <title>USPTO.gov :: webapp prototype :: Filing Basis</title>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -88,7 +88,7 @@
             <li><a href="#">Applications / Registration</a></li>-->
             <!--<li><a href="#" class="glyphed" id="showcontacts"><span class="glyphicon glyphicon-list" aria-hidden="true"></span>Managed Contacts</a></li>-->
             <!--<li><a href="#" class="glyphed" id="showfees"><span class="glyphicon glyphicon-usd kerned" aria-hidden="true"></span>Fees</a></li>-->
-            <!--<li><a href="#" class="glyphed" data-toggle="popover" id="togglepop"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Mark</a></li>-->
+            <li><a href="#" class="glyphed" data-toggle="popover" id="togglepop"><span class="glyphicon glyphicon-picture" aria-hidden="true"></span>Show My Mark</a></li>
           </ul>
           <br style="clear:both">
         </div><!-- /.navbar-collapse -->
@@ -96,7 +96,7 @@
     </nav>
   
 <div class="container-fluid">    
-  <div class="row content" id="uploadmark">
+  <div class="row content">
     <main class="col-xs-12 col-sm-8 col-md-8 col-lg-7">
       <!--START Content Div-->
       <div class="row">
@@ -114,7 +114,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-2 two active">
+                        <div class="col-xs-2 two done">
                             <div class="row">
                                 <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
                                     <span>2</span>
@@ -124,7 +124,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-2 three">
+                        <div class="col-xs-2 three done">
                             <div class="row">
                                 <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
                                     <span>3</span>
@@ -134,7 +134,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-2 four">
+                        <div class="col-xs-2 four active">
                             <div class="row">
                                 <div class="col-xs-3 col-sm-5 col-md-4 col-lg-4 number">
                                     <span>4</span>
@@ -167,48 +167,41 @@
                     </div>
                 </section>
             </div>
-          <h1>Trademark Details &#8211; Design with Text</h1>
-          <p class="required"><span class="weight600">&#42; = Required</span></p>
-          <!--START Trademark Examples-->
-              <!--START Standard Character-->
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="card-text noexpand">
-                                <h2 class="card-title weight600" id="markinfo">Mark Information</h2>
-                            </div>
-                            	<div class="row">
-                                    <div class="col-xs-12" >
-                                      <p id="typemark"><span class="weight600">&#42;</span> Upload a file containing your mark.</p>						
-                                        <!--Start Dropzone-->
-                                      <div class="col-xs-12 form-group form-group-md">
-                                        <form action="" method="post" enctype="multipart/form-data" aria-labelledby="markinfo">
-                                            <fieldset>
-                                                <legend class="sr-only"><span>File upload</span></legend>
-                                                <div class="form-group form-group-md">
-                                                    <label class="small upload-drop-zone" for="file"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select a File</label>
-                                                    <input type="file" id="file" name="file" class="form-control">
-                                                </div><!-- Drop Zone -->
-                                                
-                                            </fieldset>
-                                        </form>
-                                        <div class="row">
-                                            <div class="js-upload-finished col-xs-12 col-md-10 col-lg-8">
-                                                <p id="uploaded">Processed files</p>
-                                                <div class="list-group">
-                                                    <a href="#" class="list-group-item list-group-item-success" aria-labelledby="uploaded"></a>
-                                                </div>
+          <h1>Filing Basis</h1>
+              	<div class="row">
+                    <form action="" method="post" >
+                       	<fieldset>
+                            <div class="col-xs-12 form-group form-group-md margincontent" id="inuseyes">
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <p class="weight600" id="inuse">Is the mark currently in use? <a href="#" data-toggle="tooltip" title="" class="glyphicon glyphicon-info-sign test" data-placement="right" data-original-title="In use means you are already using your trademark in commerce. Commerce means the buying and selling of goods and services"></a></p>
+                                        <div role="radiogroup" aria-labelledby="inuse">
+                                            <div class="radio">
+                                              <label for="inlineRadio21" class="radio-inline radiocontainer">Yes, the mark is in use with all of the selected goods/services<input type="radio" name="markinuse" id="inlineRadio21" value="yes" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
                                             </div>
-                                        </div><!-- Upload Finished -->
+                                            <div class="radio">
+                                              <label for="inlineRadio022" class="radio-inline radiocontainer">No, the mark is not in use with all of the selected goods/services<input type="radio" name="markinuse" id="inlineRadio022" value="no" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                            </div>
+                                        </div><!--END radiogroup-->
+                                        <p class="weight600" id="foreigninuse">Do you have a registration and/or pending application in a foreign country for same goods/services?</p>
+                                        <div role="radiogroup" aria-labelledby="foreigninuse">
+                                            <div class="radio">
+                                              <label for="inlineRadio23" class="radio-inline radiocontainer">Yes<input type="radio" name="foreigninuse" id="inlineRadio23" value="yes" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                            </div>
+                                            <div class="radio">
+                                              <label for="inlineRadio024" class="radio-inline radiocontainer">No<input type="radio" name="foreigninuse" id="inlineRadio024" value="no" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                            </div>
+                                        </div><!--END radiogroup-->
                                     </div>
-                              	</div>
+                                </div>
                             </div>
-                        </div><!--END col-->
-                    </div><!--END row-->                    
-              <!--END examples row-->
-            </div>
-          </div>
-          <!--END row-->
-          <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
+                        </fieldset>
+                    </form>
+                </div>
+            </div>                   
+        </div>
+        <!--prev / next buttons-->
+        <div class="inlinebuttons btn-group btn-group-justified" role="nav" aria-label="view previous or next page" id="prevnxt">
             <div class="btn-group">
                 <button type="button" class="btn btn-sm btn-default fill prev" id="" value="previous">Previous</button>
             </div>
@@ -217,9 +210,9 @@
                     <div class="round"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></div></button>
             </div>
         </div>
-    </main>
-  </div><!--END div content-->
-</div><!--END div container-->
+       </main>
+     </div><!--END div content-->
+    </div><!--END div container-->
   
 		    <!--jquery and web jars -->
     <!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
