--- a/marks_design_with_text_disclaimer_M2.html
+++ b/marks_design_with_text_disclaimer_M2.html
@@ -189,10 +189,9 @@
                                                         </div>
                                                     </div>
                                                     <div class="margincontent">
-                                                        <p id="disclaim">Is there a portion of your mark that you wish to disclaim?</p>                                  
-                                                        <div role="radiogroup" aria-labelledby="disclaim">
-                                                          <label for="inlineRadio09" class="radio-inline"><input type="radio" name="disclaimradio" id="inlineRadio09" value="yes">Yes</label>
-                                                          <label for="inlineRadio010" class="radio-inline"><input type="radio" name="disclaimradio" id="inlineRadio010" value="no">No</label>
+                                                        <p id="disclaim">Is there a portion of your mark that you wish to disclaim?</p>                                                        <div role="radiogroup" aria-labelledby="disclaim">
+                                                          <label for="inlineRadio09" class="radio-inline radiocontainer">Yes<input type="radio" name="disclaimradio" id="inlineRadio09" value="yes" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                                          <label for="inlineRadio010" class="radio-inline radiocontainer">No<input type="radio" name="disclaimradio" id="inlineRadio010" value="no" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yesdisclaimer" class="form-group form-group-md form-horizontal"><!--toggle 'yes' radio-->
                                                             <div class="margincontent">
@@ -227,8 +226,8 @@
                                                     <div class="margincontent">
                                                         <p id="prioreg">Do you have a prior registration for the same mark?</p>                                                        
                                                         <div role="radiogroup" aria-labelledby="prioreg">
-                                                          <label for="inlineRadio011" class="radio-inline"><input type="radio" name="priorradio" id="inlineRadio011" value="yes">Yes</label>
-                                                          <label for="inlineRadio012" class="radio-inline"><input type="radio" name="priorradio" id="inlineRadio012" value="no">No</label>
+                                                          <label for="inlineRadio011" class="radio-inline radiocontainer">Yes<input type="radio" name="priorradio" id="inlineRadio011" value="yes" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                                          <label for="inlineRadio012" class="radio-inline radiocontainer">No<input type="radio" name="priorradio" id="inlineRadio012" value="no" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yesprior" role="region" aria-labelledby="prioreg" class="form-group form-group-md row">
                                                             <div class="form-group form-group-md col-xs-12 col-sm-8" id="copy">
@@ -265,8 +264,8 @@
                                                     <div class="margincontent">
                                                         <p id="meansignificance">Does the wording in your mark have a particular meaning or significance in your industry?</p>                                            			
                                                         <div role="radiogroup" aria-labelledby="meansignificance">
-                                                          <label for="inlineRadio013" class="radio-inline"><input type="radio" name="meaningradio" id="inlineRadio013" value="yes">Yes</label>
-                                                          <label for="inlineRadio014" class="radio-inline"><input type="radio" name="meaningradio" id="inlineRadio014" value="no">No</label>
+                                                          <label for="inlineRadio013" class="radio-inline radiocontainer">Yes<input type="radio" name="meaningradio" id="inlineRadio013" value="yes" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
+                                                          <label for="inlineRadio014" class="radio-inline radiocontainer">No<input type="radio" name="meaningradio" id="inlineRadio014" value="no" aria-checked="false" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yesmeaning" role="region" class="form-horizontal form-group form-group-md">
                                                             <div class="col-xs-12 col-md-7">
